<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgInContact">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="#7c43bd"
                android:clickable="true"
                android:drawableStart="@drawable/phone"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/call_me"
                android:textColor="#FFF"
                app:icon="@drawable/phone_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <Button
                android:id="@+id/btnEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="#7c43bd"
                android:drawableStart="@drawable/mail"
                android:drawableLeft="@drawable/mail"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:text="@string/email_me"
                android:textColor="#FFF"
                app:icon="@drawable/phone_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCall" />

            <Button
                android:id="@+id/btnGoToSite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="#7c43bd"
                android:drawableStart="@drawable/go_to_site"
                android:drawableLeft="@drawable/go_to_site"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:text="@string/open_site"
                android:textColor="#FFF"
                app:icon="@drawable/phone_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnEmail" />

            <Button
                android:id="@+id/btnSendContact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="#7c43bd"
                android:drawableStart="@drawable/shourtcut"
                android:drawableLeft="@drawable/shourtcut"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:text="@string/send_contact"
                android:textColor="#FFF"
                app:icon="@drawable/phone_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnGoToSite" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imgInContact"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/about_img_desc"
        android:src="@mipmap/my_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/my_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>